--- a/code-atlus/src/components/Home/HomeMobile.css
+++ b/code-atlus/src/components/Home/HomeMobile.css
@@ -2,6 +2,7 @@
 .titlesubimage {
   width: 150px;
   margin-top: 15px;
+  margin-right: 0px;
   flex-shrink: 0;
 }
 
