--- a/code-atlus/src/components/MainPage/MainPageMobile.css
+++ b/code-atlus/src/components/MainPage/MainPageMobile.css
@@ -15,6 +15,7 @@
     min-width: 335px;
     max-width: 335px;
     margin-left: 10px;
+    margin-top: -15px;
   }
 
   .main-content-box h1, h2, h3, h4, ul, li, p {
