--- a/code-atlus/src/components/Sidebar/Sidebar.css
+++ b/code-atlus/src/components/Sidebar/Sidebar.css
@@ -6,7 +6,8 @@
   box-sizing: border-box;
   border-radius: 6px;
   margin-right: 10px;
-  margin-top: 20px;
+  margin-top: 10px;
+  margin-bottom: 20px;
 }
 
 .sidebar ul {
